<resources>
    <string name="app_name">FiSiMiLi</string>
    <string name="issuesUL">Issues提交者</string>
    <string name="song_play_time">00:00</string>
    <string name="song_total_time">--:--</string>
    <string name="save">保存</string>
    <string name="unknow">未知</string>
    <string name="unknown">未知</string>
    <string name="submit">提交</string>
    <string name="song_name">歌名</string>
    <string name="album">专辑</string>
    <string name="lyricist">作词</string>
    <string name="composer">作曲</string>
    <string name="arrangement">编曲</string>
    <string name="singer">歌手</string>
    <string name="nmn">简谱</string>
    <string name="next">下一步</string>
    <string name="ezy">和我一起变成偶像，拯救艾欧泽亚吧！</string>
    <string name="collection">收藏</string>
    <string name="search">搜索</string>
    <string name="call">查看全部</string>
    <string name="github_token">github Token</string>
    <string name="upnumu">上传乐谱</string>
    <string name="qypweb">琴艺谱</string>
    <string name="zjpweb">找简谱网</string>
    <string name="about">关于</string>
    <string name="other_site">其他站点</string>
</resources>
