<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.songdetail.SongDetailFragment">
    <ImageView
            android:id="@+id/water_ball"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>


    <ImageView
            android:id="@+id/water_ball_2"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/water_ball_3"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_2" tools:ignore="MissingConstraints"/>


    <ImageView
            android:id="@+id/water_ball_4"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/water_ball_5"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_2" tools:ignore="MissingConstraints"/>


    <ImageView
            android:id="@+id/water_ball_6"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/water_ball_7"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>


    <ImageView
            android:id="@+id/water_ball_8"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_2" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/water_ball_9"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_1" tools:ignore="MissingConstraints"/>

    <ImageView
            android:id="@+id/water_ball_10"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/water_ball_2" tools:ignore="MissingConstraints"/>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"

            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp"

    >
        <RelativeLayout
                android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5dp">
            <LinearLayout
                    android:id="@+id/asd_top_ll"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/asd_uppic_iv"
                        android:layout_margin="8dp"
                        android:background="@mipmap/ic_launcher"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>
                <TextView
                        android:id="@+id/asd_upload_tx"
                        android:layout_width="wrap_content" android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/issuesUL"/>
            </LinearLayout>
            <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_below="@+id/asd_top_ll"
                    android:id="@+id/asd_play_ll"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <Button
                        android:visibility="invisible"
                        android:layout_width="25dp" android:layout_height="25dp"
                        android:id="@+id/asd_play_btn"
                        android:background="@drawable/play"
                />
                <TextView
                        android:layout_marginStart="8dp"
                        android:id="@+id/sdf_start_tx"
                        android:layout_weight="2"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/song_play_time"/>
                <SeekBar
                        android:id="@+id/sdf_progress_sk"
                        android:layout_weight="12"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/sdf_end_tx"
                        android:layout_weight="2"
                        android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/song_total_time"/>
            </LinearLayout>
            <TextView

                    android:text="detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/asd_body_tx"
                    android:layout_below="@+id/asd_play_ll"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>